--- a/deps/wxwidgets/lib/wx/config/osx_cocoa-unicode-static-3.1
+++ b/deps/wxwidgets/lib/wx/config/osx_cocoa-unicode-static-3.1
@@ -1027,7 +1027,7 @@ ldflags_gl=""
 
 ldlibs_base="libz.a -lwxregexu-3.1 liblzma.a libiconv.dylib -framework Security -framework Carbon -framework Cocoa -framework CoreFoundation -framework IOKit"
 ldlibs_core="-lwx_baseu-3.1 libjpeg.a libpng.a libz.a libtiff.a -framework AudioToolbox -framework WebKit "
-ldlibs_gl="-lwx_baseu-3.1 -lwx_osx_cocoau_core-3.1 OpenGL.framework OpenGL.framework"
+ldlibs_gl="-lwx_baseu-3.1 -lwx_osx_cocoau_core-3.1"
 ldlibs_html="-lwx_baseu-3.1 -lwx_osx_cocoau_core-3.1"
 ldlibs_media="-lwx_baseu-3.1 -lwx_osx_cocoau_core-3.1 -framework AVFoundation -framework AVKit -framework CoreMedia"
 ldlibs_xml="-lwx_baseu-3.1 libexpat.dylib"
